[gd_scene load_steps=12 format=3 uid="uid://c87btbt4eg8vc"]

[ext_resource type="Texture2D" uid="uid://drq7yaq85hyhl" path="res://ui/saveScreen/saveFile.png" id="1_bmtr0"]
[ext_resource type="Script" uid="uid://d0s6007oolbm1" path="res://scripts/all/save_section.gd" id="1_iw4mx"]
[ext_resource type="LabelSettings" uid="uid://lxdgasdisb1j" path="res://labelSettings/grayTitle.tres" id="2_bmtr0"]
[ext_resource type="LabelSettings" uid="uid://c2rivmn3bo3d2" path="res://labelSettings/graySubTitle.tres" id="3_iw4mx"]
[ext_resource type="Texture2D" uid="uid://00s0ayaoxej0" path="res://ui/battle/emotions/backgrounds/neutral.png" id="5_idobr"]
[ext_resource type="Texture2D" uid="uid://c80t8pjx3sn4f" path="res://assets/faces/brenna/brenna_neutral_highres.png" id="6_idobr"]
[ext_resource type="Texture2D" uid="uid://cdu7go104cnp0" path="res://assets/dialog/faces/fa_luke_neutral.png" id="7_0uc64"]
[ext_resource type="Texture2D" uid="uid://cl2i7f2b8j2m0" path="res://assets/faces/luke/luke_neutral.png" id="7_tw5mw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tw5mw"]
atlas = ExtResource("6_idobr")
region = Rect2(0, 0, 900, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uc64"]
atlas = ExtResource("7_tw5mw")
region = Rect2(0, 0, 900, 900)

[sub_resource type="SpriteFrames" id="SpriteFrames_0uc64"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw5mw")
}],
"loop": true,
"name": &"brenna",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"fa_brenna",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_0uc64")
}],
"loop": true,
"name": &"fa_luke",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uc64")
}],
"loop": true,
"name": &"luke",
"speed": 5.0
}]

[node name="SaveSection" type="MarginContainer"]
script = ExtResource("1_iw4mx")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_bmtr0")

[node name="File#" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 41.0
offset_top = -1.0
offset_right = 114.0
offset_bottom = 35.0
text = "File 1:"
label_settings = ExtResource("2_bmtr0")
vertical_alignment = 1
uppercase = true

[node name="FilePart" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 127.0
offset_top = -1.0
offset_right = 428.0
offset_bottom = 35.0
label_settings = ExtResource("2_bmtr0")
vertical_alignment = 1
uppercase = true

[node name="CurrentName" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 118.0
offset_top = 33.0
offset_right = 425.0
offset_bottom = 61.0
label_settings = ExtResource("3_iw4mx")
vertical_alignment = 2
uppercase = true

[node name="CurrentLevel" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 118.0
offset_top = 33.0
offset_right = 425.0
offset_bottom = 61.0
label_settings = ExtResource("3_iw4mx")
horizontal_alignment = 2
vertical_alignment = 2
uppercase = true

[node name="TotalPlaytime" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 118.0
offset_top = 58.0
offset_right = 425.0
offset_bottom = 86.0
label_settings = ExtResource("3_iw4mx")
vertical_alignment = 2
uppercase = true

[node name="Playtime" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 118.0
offset_top = 58.0
offset_right = 425.0
offset_bottom = 86.0
label_settings = ExtResource("3_iw4mx")
horizontal_alignment = 2
vertical_alignment = 2
uppercase = true

[node name="LastLocation" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 118.0
offset_top = 83.0
offset_right = 425.0
offset_bottom = 111.0
label_settings = ExtResource("3_iw4mx")
vertical_alignment = 2
uppercase = true

[node name="Location" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 118.0
offset_top = 83.0
offset_right = 425.0
offset_bottom = 111.0
label_settings = ExtResource("3_iw4mx")
horizontal_alignment = 2
vertical_alignment = 2
uppercase = true

[node name="bg" type="TextureRect" parent="TextureRect"]
clip_contents = true
layout_mode = 0
offset_left = 3.0
offset_top = 35.0
offset_right = 105.0
offset_bottom = 137.0
texture = ExtResource("5_idobr")

[node name="Container" type="ColorRect" parent="TextureRect/bg"]
clip_contents = true
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 101.0
offset_bottom = 101.0
color = Color(1, 1, 1, 0)

[node name="Face" type="AnimatedSprite2D" parent="TextureRect/bg/Container"]
show_behind_parent = true
position = Vector2(50, 49)
scale = Vector2(0.117, 0.117)
sprite_frames = SubResource("SpriteFrames_0uc64")
animation = &"fa_luke"

[node name="Darken" type="ColorRect" parent="TextureRect/bg"]
clip_contents = true
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 101.0
offset_bottom = 102.0
color = Color(0, 0, 0, 0.501961)

[node name="CursorPoint" type="Marker2D" parent="."]
position = Vector2(23, 17)
